--- a/sites/sae/index.html
+++ b/sites/sae/index.html
@@ -48,7 +48,7 @@
             </p>
           </div>
           <a
-            href="#"
+            href="https://github.com/duckymods/Mods/raw/main/sae/livro-professor.user.js"
             style="align-self: flex-start; right: 00; position: relative"
             class="bg-base text-mocha-mantle text-catppuccin-onPrimary py-2 px-4 rounded shadow hover:bg-mantle"
           >
