--- a/steam-scam-decryptor/index.html
+++ b/steam-scam-decryptor/index.html
@@ -19,7 +19,9 @@
         type="text"
         placeholder="Encrypted Data"
       />
-      <div id="output" class="output"></div>
+      <div id="output" class="output">
+      </div>
+      <button class="copy-content">Copy JSON</button>
     </div>
     <script src="decrypt.browser.js"></script>
   </body>
