--- a/sites/sae/index.html
+++ b/sites/sae/index.html
@@ -24,7 +24,7 @@
       <h1 class="text-center text-xl text-mocha-mantle">Mods disponíveis</h1>
       <h1 class="text-center font-bold text-mocha-mantle">Site: Sae Digital</h1>
       <div class="mx-2 my-10 w-full">
-        <div class="text-left bg-crust p-6 rounded-lg shadow-lg w-full flex">
+        <div class="text-left bg-crust p-6 rounded-lg shadow-lg w-full flex mb-6">
           <img
             class="rounded-lg"
             src="/assets/img/logo_sae-ld.png"
@@ -48,7 +48,45 @@
             </p>
           </div>
           <a
-            href="https://github.com/duckymods/Mods/raw/main/sae/livro-professor.user.js"
+            href="https://raw.githubusercontent.com/duckymods/Mods/refs/heads/main/sae/livro-professor.user.js"
+            style="align-self: flex-start; right: 00; position: relative"
+            class="bg-base text-mocha-mantle text-catppuccin-onPrimary py-2 px-4 rounded shadow hover:bg-mantle"
+          >
+            Instalar
+          </a>
+        </div>
+        <div class="text-left bg-crust p-6 rounded-lg shadow-lg w-full flex" style="margin-top: 16px;">
+          <img
+            class="rounded-lg"
+            src="/assets/img/logo_sae-ld.png"
+            alt="Card Image"
+            width="90px"
+            height="90px"
+          />
+          <span> </span>
+          <div class="grid ml-6 w-full">
+            <h2
+              class="text-xl text-mocha-mantle font-bold mb-2"
+              style="margin-left: 1rem"
+            >
+              Livro Digital (Enhanced)
+            </h2>
+            <p class="text-mocha-mantle" style="margin-left: 1.05rem">
+              Libera o modo professor no livro digital sae.
+            </p>
+            <p class="text-mocha-mantle" style="margin-left: 1.05rem">
+              Última Atualização: 1 de Junho de 2024
+            </p>
+          </div>
+          <a
+            href="/sites/sae/livrodigital-enhanced"
+            style="align-self: flex-start; right: 00; position: relative; margin-right: 16px;"
+            class="bg-base text-mocha-mantle text-catppuccin-onPrimary py-2 px-4 rounded shadow hover:bg-mantle"
+          >
+            Informações
+          </a>
+          <a
+            href="https://raw.githubusercontent.com/duckymods/Mods/refs/heads/main/sae/livro-enhanced.user.js"
             style="align-self: flex-start; right: 00; position: relative"
             class="bg-base text-mocha-mantle text-catppuccin-onPrimary py-2 px-4 rounded shadow hover:bg-mantle"
           >
