--- a/sites/sae/index.html
+++ b/sites/sae/index.html
@@ -72,10 +72,10 @@
               Livro Digital (Enhanced)
             </h2>
             <p class="text-mocha-mantle" style="margin-left: 1.05rem">
-              Libera o modo professor no livro digital sae.
+              Melhorias para o Livro Digital Sae
             </p>
             <p class="text-mocha-mantle" style="margin-left: 1.05rem">
-              Última Atualização: 1 de Junho de 2024
+              Última Atualização: 24 de Janeiro de 2025
             </p>
           </div>
           <a
