--- a/sites/sae/livrodigital-enhanced/index.html
+++ b/sites/sae/livrodigital-enhanced/index.html
@@ -90,7 +90,7 @@
             </ul>
           </div>
           <a
-            href="/sites/sae/livrodigital-enhanced"
+            href="https://raw.githubusercontent.com/duckymods/Mods/refs/heads/main/sae/livro-enhanced.user.js"
             style="align-self: flex-start; right: 00; position: relative"
             class="bg-base text-mocha-mantle text-catppuccin-onPrimary py-2 px-4 rounded shadow hover:bg-mantle"
           >
