--- a/sites/sae/livrodigital-enhanced/index.html
+++ b/sites/sae/livrodigital-enhanced/index.html
@@ -46,10 +46,10 @@
               class="text-xl text-mocha-mantle font-bold mb-2"
               style="margin-left: 1rem"
             >
-              Livro Digital (Enhanced)
+              Livro Digital (Enhanced)  <span class="text-red-600">DESATUALIZADO! NÃO USE</span>
             </h2>
             <p class="text-mocha-mantle" style="margin-left: 1.05rem">
-              Última Atualização: 24 de Janeiro de 2025
+              Última Atualização: 24 de Janeiro de 2025 <span class="text-red-600">DESATUALIZADO! NÃO USE</span>
             </p>
             <p class="text-mocha-mantle" style="margin-left: 1.05rem">
               Melhorias para o livro digital sae, inclui:
@@ -94,7 +94,7 @@
             style="align-self: flex-start; right: 00; position: relative"
             class="bg-base text-mocha-mantle text-catppuccin-onPrimary py-2 px-4 rounded shadow hover:bg-mantle"
           >
-            Instalar
+            Instalar  <span class="text-red-600">DESATUALIZADO! NÃO USE</span>
           </a>
         </div>
       </div>
